scrollbar improvements, select fix

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+.CurrencyDropdown {
+  max-height: 400%;
+  overflow-y: scroll;
+}
